--- a/package.json
+++ b/package.json
@@ -66,8 +66,8 @@
     "less": "^2.7.3",
     "less-loader": "^5.0.0",
     "mockjs": "1.0.1-beta3",
-    "node-sass": "^4.9.0",
     "runjs": "^4.3.2",
+    "sass": "^1.62.1",
     "sass-loader": "^7.1.0",
     "script-ext-html-webpack-plugin": "2.1.3",
     "script-loader": "0.7.2",
