--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,3 @@
-# just a flag
-ENV = 'development'
-
-# base api
-VUE_APP_BASE_API = '/dev-api'
+ENV = "development"
+VUE_APP_BASE_API = "/dev-api"
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
