--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,3 @@
-# just a flag
-ENV = 'production'
-
-# base api
-VUE_APP_BASE_API = '/prod-api'
-
+ENV = "production"
+VUE_APP_BASE_API = "/prod-api"
+VUE_APP_BASE_NAME = "admin"
